--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fa" dir="rtl">
+<html lang="fa-IR" dir="rtl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css?family=Lalezar" rel="stylesheet">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" type="text/css" href="./css/flaticon.css">
     <title> بازی استور</title>
 </head>
 <body>
@@ -45,7 +46,7 @@
    <section id="boxes">
        <div class="container">
            <div class="box">
-            <i class="fa fa-code fa-5x"" aria-hidden="true"></i>
+            <i class="fa fa-laptop fa-5x"" aria-hidden="true"></i>
                <h3>طراحی وب</h3>
                <p>لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است. چاپگرها و متون بلکه روزنامه و مجله در ستون و سطرآنچنان که لازم است</p>
            </div>
@@ -66,7 +67,7 @@
        <div class="social">
         <span class="fa-stack fa-lg">
             
-            <a href="#"><i class="fa fa-telegram fa-stack-2x"></i></a>
+            <a href="#"><i class="fa fa-send fa-stack-2x"></i></a>
           </span>
           <span class="fa-stack fa-lg">
             
