--- a/services.html
+++ b/services.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fa" dir="rtl">
+<html lang="fa-IR" dir="rtl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -72,7 +72,7 @@
                     </div>
                     <div>
                         <label>پیام</label><br>
-                        <textarea placeholder="پیام"></textarea>
+                        <textarea placeholder="پیام" rows="8" cols="50"></textarea>
                     </div>
                     <button type="submit" class="btn_1">ارسال</button>
                 </form>
@@ -85,7 +85,7 @@
        <div class="social">
         <span class="fa-stack fa-lg">
             
-            <a href="#"><i class="fa fa-telegram fa-stack-2x"></i></a>
+            <a href="#"><i class="fa fa-send fa-stack-2x"></i></a>
           </span>
           <span class="fa-stack fa-lg">
             
