--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="fa" dir="rtl">
+<html lang="fa-IR" dir="rtl">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -56,7 +56,7 @@
        <div class="social">
         <span class="fa-stack fa-lg">
             
-            <a href="#"><i class="fa fa-telegram fa-stack-2x"></i></a>
+            <a href="#"><i class="fa fa-send fa-stack-2x"></i></a>
           </span>
           <span class="fa-stack fa-lg">
             
